--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-transformer-sharp": "^3.0.0",
     "gsap": "^3.7.1",
     "haversine-distance": "^1.2.1",
+    "install": "^0.13.0",
     "lmdb-store": "^1.6.7",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.11",
@@ -77,7 +78,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
-    "husky": "4.3.8",
+    "husky": "^8.0.1",
     "postcss": "^8.3.8",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.1",
